# game.libretro.uae4arm

depends/common/uae4arm/: CMakeLists.txt  uae4arm.txt
game.libretro.uae4arm/: addon.xml.in
